RESOLVED FIXED 122938
Prototype chain repatching in the polymorphic case fails to check if the receiver is a dictionary
https://bugs.webkit.org/show_bug.cgi?id=122938
Summary Prototype chain repatching in the polymorphic case fails to check if the rece...
Filip Pizlo
Reported 2013-10-16 20:23:00 PDT
Patch forthcoming.
Attachments
the patch (1.53 KB, patch)
2013-10-16 20:24 PDT, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2013-10-16 20:24:10 PDT
Created attachment 214419 [details] the patch
Filip Pizlo
Comment 2 2013-10-16 20:28:44 PDT
Note You need to log in before you can comment on or make changes to this bug.