Prototype chain repatching in the polymorphic case fails to check if the receiver is a dictionary https://bugs.webkit.org/show_bug.cgi?id=122938

Reviewed by Sam Weinig.

This fixes jsc-layout-tests.yaml/js/script-tests/dictionary-prototype-caching.js.layout-no-llint.

* jit/Repatch.cpp:
(JSC::tryBuildGetByIDList):



Canonical link: https://commits.webkit.org/141018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157556 268f45cc-cd09-0410-ab3c-d52691b4dbfc